cabal-version:          2.2
name:                   fsm-rwst-parsec-floydWarshall
version:                0.1.0.0
synopsis:               Apply FloydWarshall algorithm
build-type:             Simple
author:                 Amy
maintainer:             columbawong@gmail.com

common lang
  default-extensions: OverloadedStrings
                    , RecordWildCards
                    , BlockArguments

common deps
  build-depends:        base-noprelude
                      , classy-prelude
                      , containers
                      , parsec
                      , protolude
                      , split
                      , time
                      , vector
                      , writer-cps-mtl

library
  import:               lang, deps
  hs-source-dirs:       src/lib
  exposed-modules:      Prelude
                      , Types
                      , ExchangeRate.Algorithms
                      , ExchangeRate.Parsers
                      , ExchangeRate.ProcessRequests
                      , ExchangeRate.Utils
  ghc-options:          -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:     Haskell2010
  
executable fsm-rwst-parsec-floydWarshall
  import:               lang, deps
  main-is:              Main.hs
  hs-source-dirs:       src/app
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
  build-depends:        fsm-rwst-parsec-floydWarshall

common test-deps
  build-depends:      fsm-rwst-parsec-floydWarshall
                    , HUnit
                    , hspec
                    -- , hedgehog
                    -- , tasty
                    -- , tasty-hedgehog
                    -- , tasty-hunit

test-suite tests
  import:             lang, deps, test-deps
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     src/test
  other-modules:      ExchangeRate.AlgorithmsSpec
                    , ExchangeRate.MockData
                    , ExchangeRate.ParsersSpec
                    , ExchangeRate.ProcessRequestsSpec
                    , ExchangeRate.TestUtils
                    , ExchangeRate.UtilsSpec
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded

-- test-suite fsm-rwst-parsec-floydWarshall-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs:
--       test
--   default-extensions: OverloadedStrings , RecordWildCards , NoImplicitPrelude
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       HUnit
--     , MissingH
--     , base >=4.7 && <5
--     , containers
--     , fsm-rwst-parsec-floydWarshall
--     , hspec
--     , parsec
--     , protolude
--     , split
--     , time
--     , utility-ht
--     , vector
--     , writer-cps-mtl
--   other-modules:
--       ExchangeRate.AlgorithmsSpec
--       ExchangeRate.MockData
--       ExchangeRate.ParsersSpec
--       ExchangeRate.ProcessRequestsSpec
--       ExchangeRate.TestUtils
--       ExchangeRate.UtilsSpec
--       Paths_fsm_rwst_parsec_floydWarshall
--   default-language: Haskell2010
