cabal-version:          2.2
name:                   fsm-rwst-parsec-floydWarshall
version:                0.1.0.0
synopsis:               Apply FloydWarshall algorithm
build-type:             Simple
author:                 Amy
maintainer:             columbawong@gmail.com

common lang
  default-extensions: OverloadedStrings
                    , RecordWildCards
                    , BlockArguments

common deps
  build-depends:        base-noprelude
                      , classy-prelude
                      , containers
                      , lens
                      , mtl
                      , parsec
                      , protolude
                      , split
                      , text
                      , time
                      , vector
                      , writer-cps-mtl

library
  import:               lang, deps
  hs-source-dirs:       src/lib
  exposed-modules:      Prelude
                      , Types
                      , Algorithms
                      , Parsers
                      , ProcessRequests
                      , Utils
  ghc-options:          -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:     Haskell2010
  
executable fsm-rwst-parsec-floydWarshall
  import:               lang, deps
  main-is:              Main.hs
  hs-source-dirs:       src/app
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
  build-depends:        fsm-rwst-parsec-floydWarshall

common test-deps
  build-depends:      fsm-rwst-parsec-floydWarshall
                    , hedgehog
                    , tasty
                    , tasty-hedgehog
                    , tasty-hunit

test-suite tests
  import:             lang, deps, test-deps
  type:               exitcode-stdio-1.0
  main-is:            tests.hs
  hs-source-dirs:     src/test
  other-modules:      AlgorithmsTest
                    , MockData
                    , ParserTest
                    , ProcessRequestsTest
                    , TestUtils
                    , UtilsTest
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded